# Yggdrasil

C/CasADi_cxxwrap/: build_tarballs.jl  casadi_cxxwrap.md
C/CasADi_cxxwrap/bundled/: CMakeLists.txt  LICENSE  builders.cpp  callback.cpp  casadi_cxxwrap.cpp  casadi_cxxwrap.hpp  codegen.cpp  common.cpp  factories.cpp  functions.cpp  interpolant.cpp  matrix.cpp  opti.cpp  options.cpp  sparsity.cpp
